align unfixed sections with fixed sections

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -353,6 +353,12 @@
                 }
             }
 
+            .cell {
+                table {
+                    width: min-content;
+                }
+            }
+
             &.dash-fill-width {
                 .cell-0-1,
                 .cell-1-1 {
@@ -363,8 +369,7 @@
                     }
                 }
 
-                .cell-0-0,
-                .cell-1-0 {
+                .cell {
                     table {
                         width: max-content;
                     }
